fix unwanted horizontal scroll
fix unwanted horizontal scroll which appears when there is nothing to scroll

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -13,6 +13,7 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 body {
   margin: 0;
